--- a/scss/application/_utils.scss
+++ b/scss/application/_utils.scss
@@ -61,7 +61,7 @@
 .text-right { text-align: right; }
 .text-center { text-align: center; }
 
-.text-gray-base { color: $gray-base; }
+.text-gray-base { color: $gray-darker; }
 .text-gray-darker { color: $gray-darker; }
 .text-gray-dark { color: $gray-dark; }
 .text-gray { color: $gray; }
@@ -71,7 +71,7 @@
 .text-plum { color: $plum; }
 .text-teal { color: $teal; }
 
-.text-lime-green { color: $lime-green }
+.text-lime-green { color: $lime; }
 
 // Video Thumbnails
 //
