--- a/scss/application/global/_navs.scss
+++ b/scss/application/global/_navs.scss
@@ -27,8 +27,8 @@
         right: 30px;
         top: 50%;
         margin-top: -10px;
-        content: "\e901";
         font-family: 'amara';
+        content: "\e90c";
         font-size: 17px;
         color: $turquoise;
       }
