--- a/scss/application/views/_dashboard.scss
+++ b/scss/application/views/_dashboard.scss
@@ -239,7 +239,7 @@ Dashboard Sections
       color: #ffffff;
       &:after {
         font-family: 'amara';
-        content: "\e901";
+        content: "\e90c";
         display: block;
         position: absolute;
         bottom: 10px;
