--- a/scss/application/elements/_video_card.scss
+++ b/scss/application/elements/_video_card.scss
@@ -98,7 +98,7 @@
   font-size: 12px;
   &:before {
     font-family: 'amara';
-    content: "\e902";
+    content: "\e911";
     display: inline-block;
     width: 16px;
     height: 20px;
@@ -158,7 +158,7 @@
   text-align: left;
   &:after {
     font-family: 'amara';
-    content: "\e901";
+    content: "\e90c";
     display: block;
     position: absolute;
     bottom: 10px;
