--- a/scss/base/_font_icons.scss
+++ b/scss/base/_font_icons.scss
@@ -1,6 +1,3 @@
-// DEPRECATED - Moved to base/font_icons.scss
-
-
 // Icons
 //
 // Icons are implemented via a custom font-family. The basic syntax is `<i class="icon icon-filename">`.
@@ -131,17 +128,19 @@
 //
 // Styleguide icons
 @font-face {
-    font-family: 'amara';
-    src:    url("../fonts/amara.eot");
-    src:    url("../fonts/amara.eot?#iefix") format('embedded-opentype'),
-        url("../fonts/amara.woff2") format('woff2'),
-        url("../fonts/amara.ttf") format('truetype'),
-        url("../fonts/amara.woff") format('woff'),
-        url("../fonts/amara.svg#amara") format('svg');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'amara';
+  src:  url('/assets/fonts/amara.eot?5wa0dq');
+  src:  url('/assets/fonts/amara.eot?5wa0dq#iefix') format('embedded-opentype'),
+    url('/assets/fonts/amara.woff2?5wa0dq') format('woff2'),
+    url('/assets/fonts/amara.ttf?5wa0dq') format('truetype'),
+    url('/assets/fonts/amara.woff?5wa0dq') format('woff'),
+    url('/assets/fonts/amara.svg?5wa0dq#amara') format('svg');
+  font-weight: normal;
+  font-style: normal;
 }
 
+[class^="icon-"],
+[class*=" icon-"],
 i {
     /* use !important to prevent issues with browser extensions that change fonts */
     font-family: 'amara' !important;
@@ -160,108 +159,148 @@ i {
 
 
 ///////////////////////////
+
 .icon-alert:before {
-  content: "\e912";
-}
-.icon-approve:before {
-  content: "\e900";
+  content: "\e901";
 }
 .icon-approve_outline:before {
-  content: "\e909";
+  content: "\e907";
 }
-.icon-incomplete:before {
+.icon-approve:before {
+  content: "\e90a";
+}
+.icon-arrow:before {
+  content: "\e90c";
+}
+.icon-avatar-default:before {
+  content: "\e90f";
+}
+.icon-avatar-team:before {
+  content: "\e910";
+}
+.icon-clock:before {
   content: "\e911";
 }
 .icon-complete:before {
-  content: "\e90c";
+  content: "\e912";
 }
 .icon-deny:before {
-  content: "\e90a";
+  content: "\e913";
 }
 .icon-evaluate:before {
-  content: "\e90b";
+  content: "\e914";
 }
-.icon-review:before {
-  content: "\e904";
+.icon-incomplete:before {
+  content: "\e915";
 }
-.icon-transcribe:before {
-  content: "\e907";
-}
-.icon-translate:before {
-  content: "\e908";
+.icon-info:before {
+  content: "\e916";
 }
 .icon-initial-work:before {
-  content: "\e90f";
-}
-.icon-provider-request:before {
-// This is still to be implemented.  Let's use the transcribe icon as a
-// placeholder
-  content: "\e907";
-}
-
-
-.icon-clock:before {
-  content: "\e902";
+  content: "\e917";
 }
 .icon-mail:before {
-  content: "\e903";
+  content: "\e918";
   color: $teal !important;
 }
+.icon-review:before {
+  content: "\e919";
+}
 .icon-search:before {
-  content: "\e905";
+  content: "\e91a";
 }
 .icon-star:before {
-  content: "\e906";
+  content: "\e91b";
+}
+.icon-transcribe:before {
+  content: "\e91c";
+}
+.icon-translate:before {
+  content: "\e91d";
 }
 .icon-trash:before {
-  content: "\e910";
+  content: "\e91e";
 }
-
-.icon-loading:before {
-  // TODO: replace this with a new, animated, loading icon
+.icon-caret:before {
+  content: "\e900";
+}
+.icon-external:before {
   content: "\e902";
 }
+.icon-facebook:before {
+  content: "\e903";
+}
+.icon-instagram:before {
+  content: "\e904";
+}
+.icon-linkedin:before {
+  content: "\e905";
+}
+.icon-play:before {
+  content: "\e908";
+}
+.icon-print:before {
+  content: "\e909";
+}
+.icon-share:before {
+  content: "\e90b";
+}
+.icon-twitter:before {
+  content: "\e90d";
+}
+.icon-youtube:before {
+  content: "\e90e";
+}
 
 
 
-// Arrows
-.icon-arrow:before {
-  content: "\e901";
-}
-.icon-forward:before {
-  content: "\e901";
-}
-.icon-back:before {
-  content: "\e901";
-  display: inline-block;
-  transform: rotate(180deg);
-}
-.icon-up:before {
-  content: "\e901";
-  display: inline-block;
-  transform: rotate(-90deg);
-}
-.icon-down:before {
-  content: "\e901";
-  display: inline-block;
-  transform: rotate(90deg);
-}
+
 
 
 ///////////////////////////
 // Using the same icon in a different context. 
 // These may need to be removed or refactored at some point to avoid confusion
 
-.icon-check:before {
-  content: "\e900";
+.icon-loading:before {
+  // TODO: replace this with a new, animated, loading icon
+  content: "\e911";
 }
 
-.icon-close:before {
+.icon-provider-request:before {
+// This is still to be implemented.  Let's use the transcribe icon as a
+// placeholder
+  content: "\e91c";
+}
+
+.icon-forward:before {
+  content: "\e90c";
+}
+.icon-back:before {
+  content: "\e90c";
+  display: inline-block;
+  transform: rotate(180deg);
+}
+.icon-up:before {
+  content: "\e90c";
+  display: inline-block;
+  transform: rotate(-90deg);
+}
+.icon-down:before {
+  content: "\e90c";
+  display: inline-block;
+  transform: rotate(90deg);
+}
+
+.icon-check:before {
   content: "\e90a";
 }
 
+.icon-close:before {
+  content: "\e913";
+}
+
 .icon-edit:before {
-  content: "\e907";
+  content: "\e91c";
 }
 
 // sizes
