--- a/scss/base/_fonts.scss
+++ b/scss/base/_fonts.scss
@@ -1,3 +1,4 @@
+// Deprecated... replaced with font_icons.scss
 @font-face {
   font-family: 'amara';
   src:  url('/assets/fonts/amara.eot?5wa0dq');
