Added gulp build system
Added package.json and gulpfile.js to take the assets here and build
them using gulp and place the output in the dist/ directory.

Added django app called assets to handle using assets from this repo.

Adjusted some CSS relative URLs.

Added a couple images from unisubs to the img dir

--- a/scss/base/_font_icons.scss
+++ b/scss/base/_font_icons.scss
@@ -129,12 +129,12 @@
 // Styleguide icons
 @font-face {
   font-family: 'amara';
-  src:  url('../assets/fonts/amara.eot');
-  src:  url('../assets/fonts/amara.eot#iefix') format('embedded-opentype'),
-    url('../assets/fonts/amara.woff2') format('woff2'),
-    url('../assets/fonts/amara.ttf') format('truetype'),
-    url('../assets/fonts/amara.woff') format('woff'),
-    url('../assets/fonts/amara.svg#amara') format('svg');
+  src:  url('../fonts/amara.eot');
+  src:  url('../fonts/amara.eot#iefix') format('embedded-opentype'),
+    url('../fonts/amara.woff2') format('woff2'),
+    url('../fonts/amara.ttf') format('truetype'),
+    url('../fonts/amara.woff') format('woff'),
+    url('../fonts/amara.svg#amara') format('svg');
   font-weight: normal;
   font-style: normal;
 }
