Add support for icons in the navbar

--- a/scss/elements/_navigation.scss
+++ b/scss/elements/_navigation.scss
@@ -8,6 +8,7 @@
       }
     }
   }
+
 }
 
 // Primary Navigation: Desktop
@@ -22,9 +23,12 @@
     margin: 0;
     padding: 0;
     li {
-      display: inline-block;
+      float: left;
       margin: 0 -2px;
       padding: 0;
+      i.icon {
+         font-size: 18px;
+      }
     }
   }
   a, button {
@@ -53,7 +57,7 @@
       content: none;
     }
     li {
-      display: block;
+      float: none;
       &.separator {
         border-top: 1px solid $gray;
       }
