Added support for the styleguide

--- a/scss/application/_utils.scss
+++ b/scss/application/_utils.scss
@@ -76,7 +76,7 @@
 // Video Thumbnails
 //
 // <div class="thumbWrapper">
-//   <img src="/media/images/styleguide/placehold4.3.png" alt="Placeholder Image">
+//   <img src="http://via.placeholder.com/800x600" alt="Placeholder Image">
 //   <div class="thumbWrapper-duration">7:04</div>      
 // </div>
 //
