--- a/scss/application/elements/_select_list.scss
+++ b/scss/application/elements/_select_list.scss
@@ -28,7 +28,7 @@
 //     <div class="col-xs-11">
 //       <div class="selectList-thumb">
 //         <div class="thumbWrapper">
-//           <img src="media/images/styleguide/placehold4.3.png" alt="Placeholder Image">
+//           <img src="http://via.placeholder.com/800x600" alt="Placeholder Image">
 //         </div>
 //       </div>
 //       <h3><a href="#">Daniele Quercia: Happy Maps</a></h3>
@@ -67,7 +67,7 @@
 //     <div class="col-xs-11">
 //       <div class="selectList-thumb">
 //         <div class="thumbWrapper">
-//           <img src="media/images/styleguide/placehold4.3.png" alt="Placeholder Image">
+//           <img src="http://via.placeholder.com/800x600" alt="Placeholder Image">
 //         </div>
 //       </div>
 //       <h3><a href="#">Daniele Quercia: Happy Maps</a></h3>
@@ -106,7 +106,7 @@
 //     <div class="col-xs-11">
 //       <div class="selectList-thumb">
 //         <div class="thumbWrapper">
-//           <img src="media/images/styleguide/placehold4.3.png" alt="Placeholder Image">
+//           <img src="http://via.placeholder.com/800x600" alt="Placeholder Image">
 //         </div>
 //       </div>
 //       <h3><a href="#">Daniele Quercia: Happy Maps</a></h3>
