--- a/scss/application/elements/_video_card.scss
+++ b/scss/application/elements/_video_card.scss
@@ -8,7 +8,7 @@
 //   </header>
 //   <a href="#" class="videoCard-thumbnail">
 //     <div class="thumbWrapper">
-//       <img src="media/images/styleguide/placehold4.3.png" alt="Placeholder Image">
+//       <img src="http://via.placeholder.com/800x600" alt="Placeholder Image">
 //     </div>
 //     <div class="videoCard-caption"> 
 //       <h4 class="videoCard-title">Video Title</h4>
@@ -31,7 +31,7 @@
 // Example:
 // <a href="#" class="videoCardSimple">
 //   <div class="thumbWrapper">
-//     <img src="media/images/styleguide/placehold4.3.png" alt="Placeholder Image">
+//     <img src="http://via.placeholder.com/800x600" alt="Placeholder Image">
 //   </div>
 //   <div class="videoCardSimple-caption">
 //     <h4 class="videoCardSimple-title">The Future Of News? Virtual Reality</h4>
