--- a/scss/application/elements/_searchbar.scss
+++ b/scss/application/elements/_searchbar.scss
@@ -19,7 +19,7 @@
     top: 0;
     speak: none;
     text-transform: none;
-    font-size: 1.4325rem;
+    font-size: 22px;
     line-height: 22px;
     padding-top: 9px;
     color: $gray;
