Fixes for filter lists
- Give the correct width for the page
- Add more font sizes for Raleway, so we get the correct font
- Include application/_variables.scss so we get the correct color

--- a/scss/application.scss
+++ b/scss/application.scss
@@ -1,6 +1,7 @@
 @import 'vendor';
 // Utils
 @import 'variables';
+@import 'application/variables';
 @import 'mixins';
 @import 'base/font_icons';
 @import 'application/utils';
