--- a/scss/application/global/_grid.scss
+++ b/scss/application/global/_grid.scss
@@ -12,9 +12,9 @@ $outer-margin: 2rem !default;
 // Syntax:
 // name SIZErem,
 $breakpoints:
-  sm 48em 46rem,
-  md 62em 61rem,
-  lg 75em 73rem !default;
+  sm 768px 750px,
+  md 992px 970px,
+  lg 1430px 1400px;
 
 $flexboxgrid-max-width: 1200px !default;
 
