--- a/scss/marketing.scss
+++ b/scss/marketing.scss
@@ -9,7 +9,6 @@
 @import "base/global";
 @import "base/typography";
 @import "base/font_icons";
-@import "base/alerts";
 
 
 // Import layout / global styles
@@ -31,7 +30,7 @@
 @import "elements/buttons";
 @import "elements/video_card";
 @import "elements/login";
-@import "elements/message";
+@import "elements/alerts";
 @import "elements/sitemap";
 @import "elements/consolidate_header";
 
