--- a/scss/elements/_alerts.scss
+++ b/scss/elements/_alerts.scss
@@ -56,10 +56,28 @@
   }
 }
 
-// Page-wide messages
-#messages {
-  .alert {
-    margin: 10px;
-    margin-bottom: 0;
+// Announcements
+//
+// Site-wide announcements.  These show up as a banner that spans the entire width of the page.
+//
+// Example:
+// <div class="announcement" role="alert">
+//   <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+//   Godzilla incomming!  Take shelter
+// </div>
+//
+// Styleguide announcements
+
+.announcement {
+  display: block;
+  padding: 20px 30px;
+  margin: 0;
+  background-color: $brand-primary;
+  color: #ffffff;
+  text-align: center;
+  a {
+    color: $amaranth;
   }
 }
+
+
