--- a/scss/elements/_alerts.scss
+++ b/scss/elements/_alerts.scss
@@ -22,7 +22,7 @@
 
 .alert {
   padding: 15px;
-  margin-bottom: 20px;
+  margin-bottom: 12px;
   border: 1px solid transparent;
   border-radius: 4px;
   &.alert-success {
@@ -80,4 +80,12 @@
   }
 }
 
+// New messages alert
+.newMessages {
+  padding-top: 12px;
+}
 
+.newMessages-hide {
+  margin-top: -8px;
+  padding: 8px;
+}
