New layout for the navbar
This one uses CSS grid for modern browsers, and display: table for as a
fallabck.

pculture/amara-enterprise#1812

--- a/scss/elements/_navigation.scss
+++ b/scss/elements/_navigation.scss
@@ -170,35 +170,16 @@
 }
 
 #mainnav {
-  .container {
-    display: flex;
-    justify-content: space-between;
-    padding: 0;
-  }
-  .brand {
-    display: flex;
-    float: left;
-    width: auto;
-    margin-right: auto;
-    font-size: 24px;
-    white-space: nowrap;
-    line-height: 68px;
-    color: $brand-primary;
-    &:hover, &:focus {
-      color: $brand-primary;
-    }
-    img {
-      margin: auto 8px auto 0;
-    }
-    img.logo {
-      max-width: 150px;
-      width: 150px;
-      margin-right: 10px;
-    }
-  }
+  // Fallback for browsers that don't support grid
+  display: table;
+  // Use CSS grid for modern browsers
+  display: grid;
+  grid-template-columns: 200px 1fr 200px;
+  grid-template-rows: 100%;
+  grid-template-areas: "brand nav cta";
+  align-items: center;
+
   .primarynav {
-    display: block;
-    margin-right: auto;
     ul {
       list-style: none;
       margin: 0;
@@ -228,8 +209,9 @@
       }
     }
   }
+
   .primary-cta {
-    display: inline-block;
+    display: block;
     padding: 8px 20px;
     margin: auto 0;
     line-height: 1;
@@ -248,6 +230,52 @@
       background-color: $teal;
     }
   }
+}
+
+.mainnav-brand {
+  // Fallback for browsers that don't support grid
+  display: table-cell;
+  width: 200px;
+  vertical-align: middle;
+  // Use CSS grid for modern browsers
+  grid-area: brand;
+  justify-self: left;
+
+
+  font-size: 24px;
+  white-space: nowrap;
+  line-height: 68px;
+  color: $brand-primary;
+  &:hover, &:focus {
+    color: $brand-primary;
+  }
+  img {
+    margin: auto 8px auto 0;
+  }
+  img.logo {
+    max-width: 150px;
+    width: 150px;
+    margin-right: 10px;
+  }
+}
+
+.mainnav-nav {
+  // Fallback for browsers that don't support grid
+  display: table-cell;
+  width: auto;
+  text-align: center;
+  // Use CSS grid for modern browsers
+  grid-area: nav;
+  justify-self: center;
+}
+.mainnav-cta {
+  // Fallback for browsers that don't support grid
+  display: table-cell;
+  width: 200px;
+  vertical-align: middle;
+  // Use CSS grid for modern browsers
+  grid-area: cta;
+  justify-self: right;
 }
 
 // Primary Navigation: Mobile
