Couple fixes for topnav buttons

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -35,6 +35,7 @@ $gray-dark:              #7e7f80; //
 $gray:                   #9fa0a1; // Medium Grey
 $gray-light:             #f4f4f7; // Light Grey
 $gray-lighter:           #F3F4F6; // 
+$white:                  #FFFFFF;
 
 $teal:                   #30957b;
 $amaranth:               #f3254d;
