--- a/scss/application/global/_forms.scss
+++ b/scss/application/global/_forms.scss
@@ -31,9 +31,9 @@
 //   <label for="">Textarea</label>
 //   <textarea class="form-control"></textarea>
 // </div>
-// <div class="form-group">
+// <div class="form-actions">
+//   <button class="button borderless">Cancel</button>
 //   <button type="submit" class="button cta">Submit</button>
-//   <button class="button cta-reverse">Cancel</button>
 // </div>
 //
 // Styleguide fields
@@ -71,6 +71,10 @@ select {
 
 .form-group {
   margin-bottom: 20px;
+}
+
+.form-actions {
+  text-align: right;
 }
 
 // placeholders
