Added containers with max-width set

--- a/scss/application/global/_grid.scss
+++ b/scss/application/global/_grid.scss
@@ -241,3 +241,10 @@ $name: xs;
 }
 
 
+.container-md {
+  max-width: nth(nth($breakpoints, 2), 3);
+}
+
+.container-sm {
+  max-width: nth(nth($breakpoints, 1), 3);
+}
