Made search boxes match the size of dropdowns
This fixes the misalignment issue in pculture/unisubs#3106

--- a/scss/application/elements/_select.scss
+++ b/scss/application/elements/_select.scss
@@ -84,6 +84,8 @@ select.select {
   &.border .select2-selection {
     border-radius: 4px;
     border: 1px solid lighten($gray, 15%);
+    min-height: 39px;
+    padding-top: 4px;
   }
 
   &.select2-container--focus:not(.select2-container--open) .select2-selection {
