Added some extra CSS for the language switcher

--- a/scss/application.scss
+++ b/scss/application.scss
@@ -13,6 +13,7 @@
 // Navigation Elements
 @import "elements/navigation";
 @import "elements/consolidate_header";
+@import "elements/language_switcher";
 
 // Global
 @import 'application/global/base';
