--- a/scss/marketing.scss
+++ b/scss/marketing.scss
@@ -33,6 +33,7 @@
 @import "elements/alerts";
 @import "elements/sitemap";
 @import "elements/consolidate_header";
+@import "elements/language_switcher";
 
 // Views
 @import "views/home";
